# ADMESH-Domains

./: .domi-pin  .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  TEST-AUDIT.md  TESTING.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/memory/: lessons.md
.github/workflows/: pages.yml  publish-data.yml  release.yml  smoke-test-secrets.yml  validate-pr.yml
.specify/: README.md  feature.json
.specify/memory/: constitution.md  session-state.md
admesh_domains/: __init__.py  cli.py  generator.py  geometry.py  manifest.py  publisher.py  query.py  schema.py
admesh_domains/data/: manifest.toml
admesh_domains/templates/: dataset_card.md.j2
docs/: CATALOG_SCHEMA.md  CONTENT_UID.md  CONTRIBUTING.md  HOOKS-AUDIT.md  PUBLISH-RELEASE.md  TEST-AUDIT.md
registry_data/: manifest.toml  meshes_metadata.json
registry_data/domains/: pinch_figure8.npy
scripts/: build_site.py  cloud-startup.sh  extract_bboxes.py  github-release.sh  github_release.py  import_meshes.py  instructions.sh  instructions_on_start.sh  publish-release.sh  publish_release.py  pypi-publish.sh  pypi_publish.py  regroup_manifest.py  render_thumbnails.py  render_thumbnails_fast.py
site/: README.md
site/archived/: README.md  create.html.bak  tests.html.bak
site/src/: 404.html  browse.html  compare.html  contribute.html  domain.html  feedback.html  index.html  mesh.html  preview.html  statistics.html  styles.css  upload.html
specs/001-pythonize-and-fort14-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-size-field-defaults/: spec.md
specs/005-adcirc-mesh-registry/: MIGRATED.md  MIGRATION.md  data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tests/: conftest.py  test_cli_domain.py  test_cli_uid_audit.py  test_compare_feature.py  test_generator.py  test_geometry.py  test_integration_mixed_element.py  test_public_api.py  test_publisher.py  test_registry_query.py  test_registry_validator.py  test_validation.py
(+76 files in other folders)
