[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "admesh-domains"
version = "0.4.1"
description = "ADCIRC mesh registry - domain management and validation for mesh data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dominik Mattioli", email = "iqh766c2@duck.com"}
]
keywords = ["adcirc", "mesh", "registry", "coastal", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "tomli >= 1.1.0 ; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/domattioli/ADMESH-Domains"
Documentation = "https://github.com/domattioli/ADMESH-Domains/blob/main/docs"
Issues = "https://github.com/domattioli/ADMESH-Domains/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "shapely>=2.0",
]
hf = [
    "huggingface_hub>=0.20",
]
suggest = [
    "shapely>=2.0",
]
publish = [
    "huggingface_hub>=0.20",
    "pyarrow>=14.0",
    "jinja2>=3.0",
    "twine>=4.0",
    "build>=1.0",
    "matplotlib>=3.5",
]

[project.scripts]
admesh-domains = "admesh_domains.cli:main"

[tool.setuptools]
packages = ["admesh_domains"]
include-package-data = true

[tool.setuptools.package-data]
admesh_domains = ["py.typed", "data/*.toml", "templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests requiring network access",
]
